# pulp-cli-ostree

./: .bumpversion.cfg  .gitignore  CHANGES.md  CLAUDE.md  Makefile  lint_requirements.txt  pyproject.toml  setup.py  test_requirements.txt
.ci/: run_container.sh
.ci/assets/: Containerfile  Containerfile.source
.ci/scripts/: check_cli_dependencies.py  create_release_branch.sh  validate_commit_message.py
.ci/settings/: settings.py
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  collect_changes.yml  cookiecutter.yml  kanban.yml  lint.yml  main.yml  nightly.yml  pr.yml  pr_checks.yml  publish.yml  release.yml  release_branch.yml  test.yml
CHANGES/: +python3-9.removal  14.feature  16.feature  19.feature  38.feature  5.feature  59.misc
pulp-glue-ostree/: pyproject.toml  setup.py
pulp-glue-ostree/pulp_glue/ostree/: context.py
pulp-glue-ostree/src/pulp_glue/ostree/: context.py
pulp-glue-ostree/tests/: conftest.py
pulpcore/cli/ostree/: __init__.py  context.py  distribution.py  remote.py  repository.py
src/pulpcore/cli/ostree/: distribution.py  remote.py
tests/: conftest.py  test_help_pages.py
tests/scripts/pulp_ostree/: test_import_publish.sh  test_importing_commits_with_import_all.sh  test_importing_commits_with_import_commits.sh  test_importing_two_refs.sh  test_modify_content.sh  test_modifying_content.sh  test_ostree_sync_publish.sh  test_sync_publish.sh  test_syncing_and_publishing.sh
