[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pulp-glue-ostree"
version = "0.7.0.dev"
description = "Version agnostic glue library to talk to pulpcore's REST API. (OSTree plugin)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPLv2+"}
authors = [
  {name = "Pulp Team", email = "pulp-list@redhat.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Other Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Software Distribution",
  "Typing :: Typed",
]
dependencies = [
  "pulp-glue<0.37,>=0.23.1",
]

[project.urls]
repository = "https://github.com/pulp/pulp-cli-ostree"
changelog = "https://github.com/pulp/pulp-cli-ostree/blob/main/CHANGES.md"

[tool.setuptools.packages.find]
# This section is managed by the cookiecutter templates.
where = ["."]
include = ["pulp_glue.*"]
namespaces = true

[tool.setuptools.package-data]
# This section is managed by the cookiecutter templates.
"*" = ["py.typed"]


[tool.mypy]
# This section is managed by the cookiecutter templates.
strict = true
warn_unused_ignores = false
show_error_codes = true
files = "pulp_glue/**/*.py, tests/**/*.py"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
# This section is managed by the cookiecutter templates.
module = [
  "schema.*",
]
ignore_missing_imports = true


[tool.ruff]
# This section is managed by the cookiecutter templates.
line-length = 100

[tool.ruff.lint]
# This section is managed by the cookiecutter templates.
extend-select = ["I"]

